--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1003,6 +1003,11 @@ input[type=text]:-ms-input-placeholder {
     color: var(--text-color-grey);
 }
 
+.order__topping_card .basket__h3 {
+    grid-row: span 2;
+    align-self: center;
+}
+
 .order__topping_card .divBasket__price {
     justify-self: end;
 }
@@ -2782,27 +2787,28 @@ input[type="number"]:focus {
     .order__basket .basket__card.last__card {
         display: grid;
         grid-template-columns: min-content 1fr max-content auto;
+        grid-template-rows: auto;
         align-items: center;
     }
 
     .order__topping_card {
         grid-template-columns: 1fr auto auto;
     }
+    .order__topping_card .basket__h3 {
+        align-self: center;
+    }
 
     .order__topping_card .basket__count {
         grid-column: 3/4;
-        grid-row: 1/3;
     }
 
     .order__topping_card .divBasket__price {
         grid-column: 2/3;
-        grid-row: 1/3;
         align-self: center;
     }
 
     .order__list .basket__h3 {
         grid-column: 2/3;
-        grid-row: 1/2;
         padding-bottom: 0px;
         align-self: end;
     }
